--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html>
   
-  <link rel="stylesheet" href="https://chikorakii.github.io/chikorakii/styles/stylesheet.css">
+  <link rel="stylesheet" href="https://chikorakii.github.io/styles/stylesheet.css">
   <title>chikorakii</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-
-  <body> 
-    <h1>« chikorakii »</h1>
-  
-  Hi! I'm Lydia, aka chikorakii. I'm just an Aroha Pebble who likes graphic design and stationery and I sell and trade things!
-<p>
-I collect Rocky, my favorite ASTRO pairing is Binhyuk (with Myunghyuk a close second), and I support OT6 unconditionally~
-    
-  </body> 
+ 
+  <div class="parent">
+    <div class="child">
+      <div class="rockyimg"><img src="/chikorakii/assets/271547051_678521790194760_2395959171364530119_n.jpg" /></div>
+    </div>
+    <div class="child">
+      <div class="chikoinfo"><h1>« chikorakii »</h1>
+        <div class="socials"></div>
+<p>Hi! I'm Lydia, aka chikorakii. I'm just an Aroha Pebble who likes graphic design and stationery and I sell and trade things!
+        </p><p>
+I collect Rocky, my favorite ASTRO pairing is Binhyuk (with Myunghyuk a close second), and I support OT6 unconditionally~</p>
+        <div class="linkbox">
+          <a href="/chikorakii/pages/buy-sell-trade.html">buy, sell, trade</a>
+          <a href="https://forms.gle/Arg7DcpfVEDTWXe4A">roroha stickers</a>
+        </div>
+      </div>
+    </div>
+  </div>
+ </body> 
+  </html>
