--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     </div>
     <div class="child">
       <div class="chikoinfo"><h1>« chikorakii »</h1>
-        <div class="socials"></div>
+        <div class="socials">
+          <a href="https://twitter.com/chikorakii"><i class="fa-brands fa-twitter-square" title="twitter"></i></a>
+          <a href="https://instagram.com/chikorakii"><i class="fa-brands fa-instagram-square" title="instagram"></i></a>
+          <a href="mailto:shin.yblue09@gmail.com"><i class="fa-solid fa-paper-plane" title="email"></i></a>
+          </div>
 <p>Hi! I'm Lydia, aka chikorakii. I'm just an Aroha Pebble who likes graphic design and stationery and I sell and trade things!
         </p><p>
 I collect Rocky, my favorite ASTRO pairing is Binhyuk (with Myunghyuk a close second), and I support OT6 unconditionally~</p>
