--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="child">
       <div class="chikoinfo"><h1>« chikorakii »</h1>
         <div class="socials">
-          <a href="https://twitter.com/chikorakii"><i class="fa-brands fa-twitter-square" title="twitter"></i></a>
-          <a href="https://instagram.com/chikorakii"><i class="fa-brands fa-instagram-square" title="instagram"></i></a>
+          <a href="https://twitter.com/chikorakii"><i class="fa-brands fa-twitter" title="twitter"></i></a>
+          <a href="https://instagram.com/chikorakii"><i class="fa-brands fa-instagram" title="instagram"></i></a>
           <a href="mailto:shin.yblue09@gmail.com"><i class="fa-solid fa-paper-plane" title="email"></i></a>
           </div>
 <p>Hi! I'm Lydia, aka chikorakii. I'm just an Aroha Pebble who likes graphic design and stationery and I sell and trade things!
