--- a/pages/buy-sell-trade.html
+++ b/pages/buy-sell-trade.html
@@ -16,10 +16,24 @@
     <div class="child">
       <div class="chikoinfo"><h1>« chikorakii »</h1>
         <div class="socials">
-          buying, selling, and trading 
+          <b>buying, selling, and trading</b>
           </div>
 
-        about buying, selling and trading from me
+        <p>about buying, selling and trading from me
+      buying
+<ol><li> usa / canada preferred 
+  </li><li> worldwide okay 
+  </li><li> stamped mail: $1 (usa), $2 (worldwide)
+  </li><li> tracked starts at $4 
+  </li><li> i accept payments through paypal f&f or venmo f&f 
+  </li><li> i will provide video with flash, and video of mail drops 
+  </li><li> all pcs will be packaged with a penny sleeve and toploader 
+  </li><li> i will send address verification before mailing
+  </li><li> i will write your @ on the envelope unless requested not to
+  </li><li> not responsible for lost or damaged mail once video mailing proof is sent 
+  </li><li> nonsmoking household with cats
+        </ol>
+        </p>
         
         <div class="linkbox">
           <a href="/">return home</a>
