--- a/pages/buy-sell-trade.html
+++ b/pages/buy-sell-trade.html
@@ -36,7 +36,7 @@
         </p>
         
         <div class="linkbox">
-          <a href="/">return home</a>
+          <a href="/chikorakii">return home</a>
         </div>
       </div>
     </div>
