--- a/pages/buy-sell-trade.html
+++ b/pages/buy-sell-trade.html
@@ -1,42 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  <link rel="stylesheet" href="https://chikorakii.github.io/chikorakii/styles/stylesheet.css">
+  
+  <link rel="stylesheet" href="https://chikorakii.github.io/styles/stylesheet.css">
   <title>chikorakii</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <script src="https://kit.fontawesome.com/fa75902683.js" crossorigin="anonymous"></script>
-  </head>
-  <body> 
+ 
+<script>
+  // Write JavaScript here 
+function openCity(evt, cityName) {
+  // Declare all variables
+  var i, tabcontent, tablinks;
+
+  // Get all elements with class="tabcontent" and hide them
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+
+  // Get all elements with class="tablinks" and remove the class "active"
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+
+  // Show the current tab, and add an "active" class to the button that opened the tab
+  document.getElementById(cityName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+
+document.getElementById("defaultOpen").click();
+  </script>
+  
   <div class="parent">
     <div class="child">
       <div class="rockyimg"><img src="/chikorakii/assets/271547051_678521790194760_2395959171364530119_n.jpg" /></div>
     </div>
     <div class="child">
       <div class="chikoinfo"><h1>« chikorakii »</h1>
-        <div class="socials">
-          <b>buying, selling, and trading</b>
-          </div>
+        <div class="socials"><b>buying, selling, trading </b> </div>
+<div class="tab">
+  <button class="tablinks" onclick="openCity(event, 'buying')" id="defaultOpen">buying</button>
+  <button class="tablinks" onclick="openCity(event, 'trading')">trading</button>
+</div>
 
-        <p>about buying, selling and trading from me
-      buying
-<ol><li> usa / canada preferred 
+
+<div id="buying" class="tabcontent">
+  <div class="scroller"><ol><li> usa / canada preferred 
   </li><li> worldwide okay 
   </li><li> stamped mail: $1 (usa), $2 (worldwide)
   </li><li> tracked starts at $4 
-  </li><li> i accept payments through paypal f&f or venmo f&f 
-  </li><li> i will provide video with flash, and video of mail drops 
+  </li><li> i accept payments through paypal f & f or venmo f & f 
+  </li><li> i will provide video with flash for pcs, and video of mail drops 
   </li><li> all pcs will be packaged with a penny sleeve and toploader 
   </li><li> i will send address verification before mailing
   </li><li> i will write your @ on the envelope unless requested not to
   </li><li> not responsible for lost or damaged mail once video mailing proof is sent 
-  </li><li> nonsmoking household with cats
+  </li><li> everything comes from a nonsmoking household with cats
         </ol>
-        </p>
-        
+    </div>
+</div>
+
+<div id="trading" class="tabcontent">
+  <div class="scroller"><ol><li> usa / canada preferred 
+  </li><li> worldwide okay 
+  </li><li> i will provide video with flash and video of mail drops 
+  </li><li> all pcs will be packaged with a penny sleeve and toploader 
+  </li><li> i will send address verification before mailing
+  </li><li> i will write your @ on the envelope unless requested not to
+  </li><li> not responsible for lost or damaged mail once video mailing proof is sent 
+  </li><li> everything comes from a nonsmoking household with cats
+        </ol>
+    </div>
+  </div>
+
         <div class="linkbox">
-          <a href="/chikorakii">return home</a>
+          <a href="/chikorakii/index.html">return home</a>
         </div>
       </div>
     </div>
