--- a/pages/albums-astro.html
+++ b/pages/albums-astro.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <script type="text/javascript" src="https://chikorakii.github.io/chikorakii/styles/isotope-filters.js"></script>
+    <link href="https://chikorakii.github.io/chikorakii/styles/stylesheet.css" rel="stylesheet" />
 
 </head>
 
