--- a/pages/albums-astro.html
+++ b/pages/albums-astro.html
@@ -15,7 +15,8 @@
     <div class="button-group filters-button-group">
         <button class="button is-checked" data-filter="*">show all</button>
         <button class="button" data-filter=".owned">owned</button>
-        <button class="button" data-filter=".iso">iso</button>
+        <button class="button" data-filter=".iso">iso / wtb</button>
+        <button class="button" data-filter=".otw">in transit</button>
         <button class="button" data-filter=".full">full album</button>
         <button class="button" data-filter=".mini">mini album</button>
         <button class="button" data-filter=".subunit">subunits</button>
@@ -56,7 +57,7 @@
           <img src="https://chikorakii.github.io/chikorakii/assets/Autumn_Story_orange.png" />
             <h3 class="name">Autumn Story — Orange</h3>
         </div>
-        <div class="album mini">
+        <div class="album mini otw">
             <img src="https://chikorakii.github.io/chikorakii/assets/Blue-Flame_book.png"/>
             <h3 class="name">Blue Flame — Book</h3>
         </div>
@@ -92,11 +93,11 @@
             <img src="https://chikorakii.github.io/chikorakii/assets/gateway_timetraveler.jpg" />
             <h3 class="name">Gateway — Time Traveler</h3>
         </div>
-        <div class="album mini subunit owned">
+        <div class="album mini subunit iso">
             <img src="https://chikorakii.github.io/chikorakii/assets/in-out_fade-in.png" />
             <h3 class="name">In Out — Fade In</h3>
         </div>
-        <div class="album mini owned subunit">
+        <div class="album mini owned subunit owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/in-out_fade-out.png" />
             <h3 class="name">In Out — Fade Out</h3>
         </div>
@@ -104,7 +105,7 @@
             <img src="https://chikorakii.github.io/chikorakii/assets/one-and-only.jpeg" />
             <h3 class="name">One & Only</h3>
         </div>
-        <div class="album mini owned subunit">
+        <div class="album mini otw subunit">
             <img src="https://chikorakii.github.io/chikorakii/assets/refuge_east.png" />
             <h3 class="name">Refuge — East</h3>
         </div>
@@ -156,11 +157,11 @@
           <img src="https://chikorakii.github.io/chikorakii/assets/venus/Venus_Cha_Eunwoo.png" />
             <h3 class="name">Venus — Cha Eunwoo</h3>
         </div>
-        <div class="album mini japanese">
+        <div class="album mini japanese iso">
           <img src="https://chikorakii.github.io/chikorakii/assets/venus/Venus_Moonbin.png" />
             <h3 class="name">Venus — Moon Bin</h3>
         </div>
-        <div class="album mini japanese">
+        <div class="album mini japanese iso">
           <img src="https://chikorakii.github.io/chikorakii/assets/venus/Venus_Rocky.png" />
             <h3 class="name">Venus — Rocky</h3>
         </div>
