--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/fa75902683.js" crossorigin="anonymous"></script>
   </head>
-  <body> 
+  <body> <div class="backkground">
   <div class="parent">
     <div class="child">
       <div class="rockyimg"><img src="/chikorakii/assets/271547051_678521790194760_2395959171364530119_n.jpg" /></div>
@@ -29,6 +29,6 @@ I collect Rocky, my favorite ASTRO pairing is Binhyuk (with Myunghyuk a close se
         </div>
       </div>
     </div>
-  </div>
+    </div></div>
  </body> 
   </html>
