--- a/pages/albums-astro.html
+++ b/pages/albums-astro.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<body>
+<body><div class="backkground">
 
     <h1>album collection • astro</h1>
 
@@ -177,7 +177,7 @@
 </div>
   </div><!-- GRID END -->
 
-
+    </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="https://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
