--- a/pages/buy-sell-trade.html
+++ b/pages/buy-sell-trade.html
@@ -55,7 +55,7 @@
       </li>
       </ol>
 		</div>
-        <div class="linkbox">
+        <div class="linkbox" style="padding-top: 7px">
           <a href="/chikorakii/index.html">return home</a>
         </div>
       </div>
