--- a/pages/albums-astro.html
+++ b/pages/albums-astro.html
@@ -21,8 +21,6 @@
         <button class="button" data-filter=".mini">mini album</button>
         <button class="button" data-filter=".subunit">subunits</button>
         <button class="button" data-filter=".japanese">japanese</button>
-        <button class="button" data-filter=".seasons">seasons</button>
-        <button class="button" data-filter=".dream">dream</button>
 
     </div>
 
@@ -49,11 +47,11 @@
         <div class="album full owned">
 <img src="https://chikorakii.github.io/chikorakii/assets/all-yours_us.png"/>            <h3 class="name">All Yours — Us</h3>
         </div>
-        <div class="album mini owned seasons">
+        <div class="album mini owned">
           <img src="https://chikorakii.github.io/chikorakii/assets/Autumn_Story_red.jpg" />
             <h3>Autumn Story — Red</h3>
         </div>
-        <div class="album mini owned seasons">
+        <div class="album mini owned">
           <img src="https://chikorakii.github.io/chikorakii/assets/Autumn_Story_orange.png" />
             <h3 class="name">Autumn Story — Orange</h3>
         </div>
@@ -65,23 +63,23 @@
             <img src="https://chikorakii.github.io/chikorakii/assets/Blue-Flame_story.png"/>
             <h3 class="name">Blue Flame — Story</h3>
         </div>
-        <div class="album mini dream owned">
+        <div class="album mini owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/dream/dream-part-01-day.jpg" />
             <h3 class="name">Dream Part 01 — Day</h3>
         </div>
-        <div class="album mini dream owned">
+        <div class="album mini owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/dream/dream-part-01_night.jpg" />
             <h3 class="name">Dream Part 01 — Night</h3>
         </div>
-        <div class="album mini dream iso">
+        <div class="album mini iso">
             <img src="https://chikorakii.github.io/chikorakii/assets/dream/dream-part-02_wish.png" />
             <h3 class="name">Dream Part 02 — Wish</h3>
         </div>
-        <div class="album mini dream owned">
+        <div class="album mini owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/dream/dream-part-02_wind.png" />
             <h3 class="name">Dream Part 02 — Wind</h3>
         </div>
-        <div class="album mini dream iso">
+        <div class="album mini iso">
             <img src="https://chikorakii.github.io/chikorakii/assets/dream/dream-part-02_with.png" />
             <h3 class="name">Dream Part 02 — With</h3>
         </div>
@@ -125,11 +123,11 @@
             <img src="https://chikorakii.github.io/chikorakii/assets/Rise_Up.png" />
             <h3 class="name">Rise Up</h3>
         </div>
-        <div class="album mini owned seasons">
+        <div class="album mini owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/spring%20up.png"/>
             <h3 class="name">Spring Up</h3>
         </div>
-        <div class="album mini owned seasons">
+        <div class="album mini owned">
           <img src="https://chikorakii.github.io/chikorakii/assets/summer%20vibes.png"/>
           <h3 class="name">Summer Vibes</h3>
         </div>
