--- a/pages/albums-astro.html
+++ b/pages/albums-astro.html
@@ -21,6 +21,7 @@
         <button class="button" data-filter=".mini">mini album</button>
         <button class="button" data-filter=".subunit">subunits</button>
         <button class="button" data-filter=".japanese">japanese</button>
+        <button class="button"><a href="/chikorakii/index.html">return home</a></button>
 
     </div>
 
