--- a/pages/albums-astro.html
+++ b/pages/albums-astro.html
@@ -21,7 +21,7 @@
         <button class="button" data-filter=".mini">mini album</button>
         <button class="button" data-filter=".subunit">subunits</button>
         <button class="button" data-filter=".japanese">japanese</button>
-        <button class="button"><a href="/chikorakii/index.html">return home</a></button>
+
 
     </div>
 
@@ -174,8 +174,10 @@
         </div>
         <!-- LAST BOX -->
 </div>
-  </div><!-- GRID END -->
 
+    </div><!-- GRID END -->
+    <div class="linkbox"><a href="/chikorakii/index.html">return home</a></div>
+    
     </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
