--- a/pages/albums-astro.html
+++ b/pages/albums-astro.html
@@ -176,7 +176,7 @@
 </div>
 
     </div><!-- GRID END -->
-    <div class="linkbox"><a href="/chikorakii/index.html">return home</a></div>
+    <div class="linkbox" style="margin: 15px"><a href="/chikorakii/index.html">return home</a></div>
     
     </div>
 
