--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -11,30 +11,30 @@
 
     <h1>pc collection</h1>
 <div class="labelholder">
-<div class="button-group filters-button-group">
-  <button class="button is-checked" data-filter="*">show all</button>
-  <button class="button release" data-filter=".owned">owned</button>  
-  <button class="button release" data-filter=".priority">priority wtb</button>  
-  <button class="button release" data-filter=".iso">iso/wtb</button>  
-  <button class="button release" data-filter=".wtt">wtt</button>  
-  <button class="button type" data-filter="inclusion">album</button>  
-  <button class="button type" data-filter="pob">POB</button>  
-  <button class="button type" data-filter="etc">non-album</button>  
-  <button class="button release" data-filter="astropc">astro</button>  
-  <button class="button" data-filter="kmj"> mj</button> 
-  <button class="button" data-filter="pjw"> jinjin</button>  
-  <button class="button" data-filter="ldm"> eunwoo</button>  
-  <button class="button" data-filter="mbpc"> moonbin</button>  
-  <button class="button" data-filter="pmh"> rocky</button>  
-  <button class="button" data-filter="ysh"> sanha</button>  
-  <button class="button billlie1" data-filter="billliepc">billlie</button>  
-  <button class="button billlie" data-filter="msa"> moon sua</button>  
-  <button class="button billlie" data-filter="ksh">suhyeon</button>  
-  <button class="button billlie" data-filter="khr"> haram</button>  
-  <button class="button billlie" data-filter="fts"> tsuki</button>  
-  <button class="button billlie" data-filter="sheon"> sheon</button>  
-  <button class="button billlie" data-filter="ksy"> siyoon</button>  
-  <button class="button billlie" data-filter="oh"> haruna</button>  
+<div class="button-group2 filters-button-group">
+  <button class="button2 is-checked" data-filter="*">show all</button>
+  <button class="button2 release" data-filter=".owned">owned</button>  
+  <button class="button2 release" data-filter=".priority">priority wtb</button>  
+  <button class="button2 release" data-filter=".iso">iso/wtb</button>  
+  <button class="button2 release" data-filter=".wtt">wtt</button>  
+  <button class="button2 type" data-filter="inclusion">album</button>  
+  <button class="button2 type" data-filter="pob">POB</button>  
+  <button class="button2 type" data-filter="etc">non-album</button>  
+  <button class="button2 release" data-filter="astropc">astro</button>  
+  <button class="button2" data-filter="kmj"> mj</button> 
+  <button class="button2" data-filter="pjw"> jinjin</button>  
+  <button class="button2" data-filter="ldm"> eunwoo</button>  
+  <button class="button2" data-filter="mbpc"> moonbin</button>  
+  <button class="button2" data-filter="pmh"> rocky</button>  
+  <button class="button2" data-filter="ysh"> sanha</button>  
+  <button class="button2 billlie1" data-filter="billliepc">billlie</button>  
+  <button class="button2 billlie" data-filter="msa"> moon sua</button>  
+  <button class="button2 billlie" data-filter="ksh">suhyeon</button>  
+  <button class="button2 billlie" data-filter="khr"> haram</button>  
+  <button class="button2 billlie" data-filter="fts"> tsuki</button>  
+  <button class="button2 billlie" data-filter="sheon"> sheon</button>  
+  <button class="button2 billlie" data-filter="ksy"> siyoon</button>  
+  <button class="button2 billlie" data-filter="oh"> haruna</button>  
 </div>
   </div>
   
