Update and rename albums-astro.html to collection-albums.html

--- a/pages/collection-albums.html
+++ b/pages/collection-albums.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>astro albums</title>
+    <title> albums</title>
 
     <link href="https://chikorakii.github.io/chikorakii/styles/stylesheet.css" rel="stylesheet" />
 
@@ -10,13 +10,15 @@
 
 <body><div class="backkground-sort">
 
-    <h1>album collection • astro</h1>
+    <h1>album collection </h1>
 
     <div class="button-group filters-button-group">
         <button class="button is-checked" data-filter="*">show all</button>
         <button class="button" data-filter=".owned">owned</button>
         <button class="button" data-filter=".iso">iso / wtb</button>
         <button class="button" data-filter=".otw">in transit</button>
+        <button class="button" data-filter=".astro">astro</button>
+        <button class="button" data-filter=".billlie">billlie</button>
         <button class="button" data-filter=".full">full album</button>
         <button class="button" data-filter=".mini">mini album</button>
         <button class="button" data-filter=".subunit">subunits</button>
@@ -29,70 +31,70 @@
 
     <!-- GRID START -->
     <div class="grid"><div class="albumcontainer">
-        <div class="album full owned">
+        <div class="album full astro owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/all-light_green.png"/>
             <h3 class="name">All Light — Green</h3>
         </div>
-        <div class="album full owned">
+        <div class="album full astro owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/all-light_white.jpg"/>
             <h3 class="name">All Light — White</h3>
         </div>
-        <div class="album full owned ">
+        <div class="album full astro owned ">
             <img src="https://chikorakii.github.io/chikorakii/assets/all-yours_you.png"/>
             <h3 class="name">All Yours — You</h3>
         </div>
-        <div class="album full owned">
+        <div class="album full astro owned">
           <img src="https://chikorakii.github.io/chikorakii/assets/all-yours_me.png"/>
             <h3 class="name">All Yours — Me</h3>
         </div>
-        <div class="album full owned">
+        <div class="album full astro owned">
 <img src="https://chikorakii.github.io/chikorakii/assets/all-yours_us.png"/>            <h3 class="name">All Yours — Us</h3>
         </div>
-        <div class="album mini owned">
+        <div class="album mini astro owned">
           <img src="https://chikorakii.github.io/chikorakii/assets/Autumn_Story_red.jpg" />
             <h3>Autumn Story — Red</h3>
         </div>
-        <div class="album mini owned">
+        <div class="album mini astro owned">
           <img src="https://chikorakii.github.io/chikorakii/assets/Autumn_Story_orange.png" />
             <h3 class="name">Autumn Story — Orange</h3>
         </div>
-        <div class="album mini otw">
+        <div class="album mini astro otw">
             <img src="https://chikorakii.github.io/chikorakii/assets/Blue-Flame_book.png"/>
             <h3 class="name">Blue Flame — Book</h3>
         </div>
-        <div class="album mini">
+        <div class="album astro mini iso">
             <img src="https://chikorakii.github.io/chikorakii/assets/Blue-Flame_story.png"/>
             <h3 class="name">Blue Flame — Story</h3>
         </div>
-        <div class="album mini owned">
+        <div class="album mini astro owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/dream/dream-part-01-day.jpg" />
             <h3 class="name">Dream Part 01 — Day</h3>
         </div>
-        <div class="album mini owned">
+        <div class="album mini astro owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/dream/dream-part-01_night.jpg" />
             <h3 class="name">Dream Part 01 — Night</h3>
         </div>
-        <div class="album mini iso">
+        <div class="album mini astro iso">
             <img src="https://chikorakii.github.io/chikorakii/assets/dream/dream-part-02_wish.png" />
             <h3 class="name">Dream Part 02 — Wish</h3>
         </div>
-        <div class="album mini owned">
+        <div class="album mini astro owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/dream/dream-part-02_wind.png" />
             <h3 class="name">Dream Part 02 — Wind</h3>
         </div>
-        <div class="album mini iso">
+        <div class="album mini astro iso">
             <img src="https://chikorakii.github.io/chikorakii/assets/dream/dream-part-02_with.png" />
             <h3 class="name">Dream Part 02 — With</h3>
         </div>
-        <div class="album mini owned">
+        <div class="album mini astro owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/gateway_another-world.jpg" />
             <h3 class="name">Gateway — Another World</h3>
         </div>
-        <div class="album mini owned">
+        <div class="album mini astro owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/gateway_timetraveler.jpg" />
             <h3 class="name">Gateway — Time Traveler</h3>
         </div>
-        <div class="album mini subunit iso">
+        <div class="album mini astro subunit iso">
             <img src="https://chikorakii.github.io/chikorakii/assets/in-out_fade-in.png" />
             <h3 class="name">In Out — Fade In</h3>
         </div>
@@ -100,47 +102,47 @@
             <img src="https://chikorakii.github.io/chikorakii/assets/in-out_fade-out.png" />
             <h3 class="name">In Out — Fade Out</h3>
         </div>
-        <div class="album single owned">
+        <div class="album single astro owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/one-and-only.jpeg" />
             <h3 class="name">One & Only</h3>
         </div>
-        <div class="album mini otw subunit">
+        <div class="album mini otw astro subunit">
             <img src="https://chikorakii.github.io/chikorakii/assets/refuge_east.png" />
             <h3 class="name">Refuge — East</h3>
         </div>
-        <div class="album mini owned subunit">
+        <div class="album mini astro owned subunit">
             <img src="https://chikorakii.github.io/chikorakii/assets/refuge_west.png" />
             <h3 class="name">Refuge — West</h3>
         </div>
-        <div class="album mini owned subunit">
+        <div class="album mini astro owned subunit">
             <img src="https://chikorakii.github.io/chikorakii/assets/restore_vacation.png" />
             <h3 class="name">Restore — Vacation</h3>
         </div>
-        <div class="album mini owned subunit">
+        <div class="album mini astro owned subunit">
             <img src="https://chikorakii.github.io/chikorakii/assets/restore_staycation.jpg" />
             <h3 class="name">Restore — Staycation</h3>
         </div>
-        <div class="album mini owned">
+        <div class="album mini astro owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/Rise_Up.png" />
             <h3 class="name">Rise Up</h3>
         </div>
-        <div class="album mini owned">
+        <div class="album mini astro owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/spring%20up.png"/>
             <h3 class="name">Spring Up</h3>
         </div>
-        <div class="album mini owned">
+        <div class="album mini astro owned">
           <img src="https://chikorakii.github.io/chikorakii/assets/summer%20vibes.png"/>
           <h3 class="name">Summer Vibes</h3>
         </div>
-        <div class="album mini japanese">
+        <div class="album mini astro japanese">
           <img src="https://chikorakii.github.io/chikorakii/assets/venus/Venus.png" />
             <h3 class="name">Venus</h3>
         </div>
-        <div class="album mini japanese">
+        <div class="album mini astro japanese">
           <img src="https://chikorakii.github.io/chikorakii/assets/venus/Venus_a.png" />
             <h3 class="name">Venus — Limited A</h3>
         </div>
-        <div class="album mini japanese owned">
+        <div class="album mini astro japanese owned">
           <img src="https://chikorakii.github.io/chikorakii/assets/venus/Venus_b.png" />
             <h3 class="name">Venus — Limited B</h3>
         </div>
@@ -152,27 +154,36 @@
           <img src="https://chikorakii.github.io/chikorakii/assets/venus/Venus_JinJin.png" />
             <h3 class="name">Venus — Jinjin</h3>
         </div>
-        <div class="album mini japanese">
+        <div class="album mini astro japanese">
           <img src="https://chikorakii.github.io/chikorakii/assets/venus/Venus_Cha_Eunwoo.png" />
             <h3 class="name">Venus — Cha Eunwoo</h3>
         </div>
-        <div class="album mini japanese iso">
+        <div class="album mini astro japanese iso">
           <img src="https://chikorakii.github.io/chikorakii/assets/venus/Venus_Moonbin.png" />
             <h3 class="name">Venus — Moon Bin</h3>
         </div>
-        <div class="album mini japanese iso">
+        <div class="album mini astro japanese iso">
           <img src="https://chikorakii.github.io/chikorakii/assets/venus/Venus_Rocky.png" />
             <h3 class="name">Venus — Rocky</h3>
         </div>
-        <div class="album mini japanese">
+        <div class="album mini astro japanese">
           <img src="https://chikorakii.github.io/chikorakii/assets/venus/Venus_Sanha.png" />
             <h3 class="name">Venus — Yoon Sanha</h3>
         </div>
-        <div class="album mini seasons owned">
+        <div class="album mini seasons astro owned">
                       <img src="https://chikorakii.github.io/chikorakii/assets/winter%20dream.png" />
             <h3 class="name">Winter Dream</h3>
         </div>
-        <!-- LAST BOX -->
+
+                <div class="album mini billlie owned">
+            <h3 class="name">The Billlage of Perception</h3>
+
+                            <div class="album mini billlie owned">
+            <h3 class="name">The Collective Soul and Unconscious — Soul </h3>
+
+                            <div class="album mini billlie owned">
+            <h3 class="name">The Collective Soul and Unconscious — Unconscious </h3>
+                                <!-- LAST BOX -->
 </div>
 
     </div><!-- GRID END -->
