--- a/pages/collection-albums.html
+++ b/pages/collection-albums.html
@@ -177,12 +177,13 @@
 
                 <div class="album billlie mini owned">
             <h3 class="name">The Billlage of Perception</h3>
-
+        </div>
                             <div class="album billlie mini owned">
             <h3 class="name">The Collective Soul and Unconscious — Soul </h3>
-
+        </div>
                             <div class="album billlie mini owned">
             <h3 class="name">The Collective Soul and Unconscious — Unconscious </h3>
+        </div>
                                 <!-- LAST BOX -->
 </div>
 
