--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -548,7 +548,7 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-      <div class="photocard alllight owned" data-category="full">
+      <div class="photocard alllight owned wtt" data-category="full">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/alllight-7.png" />
     <div class="details">
     <q class="albumtitle">all light</q>
