--- a/pages/collection-albums.html
+++ b/pages/collection-albums.html
@@ -74,7 +74,7 @@
             <img src="https://chikorakii.github.io/chikorakii/assets/dream/dream-part-01_night.jpg" />
             <h3 class="name">Dream Part 01 — Night</h3>
         </div>
-        <div class="album astro mini iso">
+        <div class="album astro mini owned">
             <img src="https://chikorakii.github.io/chikorakii/assets/dream/dream-part-02_wish.png" />
             <h3 class="name">Dream Part 02 — Wish</h3>
         </div>
