--- a/pages/collection-albums.html
+++ b/pages/collection-albums.html
@@ -176,12 +176,15 @@
         </div>
 
                 <div class="album billlie mini owned">
+                    <img src="/chikorakii/assets/tbop-art.jpeg">
             <h3 class="name">The Billlage of Perception</h3>
         </div>
                             <div class="album billlie mini owned">
+                                <img src="/chikorakii/assets/tcsau1-soul.png">
             <h3 class="name">The Collective Soul and Unconscious — Soul </h3>
         </div>
                             <div class="album billlie mini owned">
+<img src="/chikorakii/assets/tcsau1-uncon.png">
             <h3 class="name">The Collective Soul and Unconscious — Unconscious </h3>
         </div>
                                 <!-- LAST BOX -->
